--- a/give_survey.html
+++ b/give_survey.html
@@ -34,9 +34,8 @@
                 </div>
                 <div class="signup">
                     <div><img src="./svg/search.svg" alt="search"></div>
-                    <div><img src="./svg/language.svg" alt="language"></div>
-                    <div><a href="sign_up.html"><img src="./svg/user.svg"
-                                alt="user"></a></div>
+                    <div><a href="my_profile.html"><img src="./svg/p.svg"
+                        alt="my_profile"></a></div>
                 </div>
             </div>
         </nav>
