--- a/take_survey.html
+++ b/take_survey.html
@@ -34,13 +34,32 @@
                 </div>
                 <div class="signup">
                     <div><img src="./svg/search.svg" alt="search"></div>
-                    <div><img src="./svg/language.svg" alt="language"></div>
-                    <div><a href="sign_up.html"><img src="./svg/user.svg"
-                                alt="user"></a></div>
+                    <div><a href="my_profile.html"><img src="./svg/p.svg"
+                        alt="my_profile"></a></div>
                 </div>
             </div>
         </nav>
-        
+        <div class="black-line"></div>
+        <nav class="take-or-give-survey-nav">
+            <div>
+                <div><img src="./images/survey-png.png" alt="logo"></div>
+                <div><img src="./svg/home.svg" alt="home"></div>
+            </div>
+            <div>
+                <h2>PROJECT NAME</h2>
+            </div>
+            <div>
+                <div><div><img src="./svg/arrow-up.svg" alt="arrow-up"></div>
+                <div><p>UPGRADE</p></div></div>
+                <div><img src="./svg/list.svg" alt="list"></div>
+                <div><img src="./svg/bell.svg" alt="bell"></div>
+            </div>
+        </nav>
+        <div class="black-line"></div>
+        <section class="take-survey-main">
+            <aside class="take-survey-left"></aside>
+            <aside class="take-survey-right"></aside>
+        </section>
         <footer class="footer">
             <div class="footer-left">
                 <h3> QUICK LINKS</h3>
