take-survey-page

--- a/give_survey.html
+++ b/give_survey.html
@@ -9,6 +9,7 @@
         <meta name="robots" content="INDEX,FOLLOW">
         <link rel="stylesheet" href="style.css">
         <link rel="stylesheet" href="utilities.css">
+        <link rel="stylesheet" href="give-survey.css">
         <title>SurveySync</title>
     </head>
     <body>
@@ -39,7 +40,26 @@
                 </div>
             </div>
         </nav>
-        
+        <div class="black-line"></div>
+        <nav class="take-or-give-survey-nav">
+            <div>
+                <div><img src="./svg/home-light.svg" alt="home"></div>
+            </div>
+            <div>
+                <h2>PROJECT NAME</h2>
+            </div>
+            <div>
+                <div class="upgrade-icon"><div><img src="./svg/arrow-up.svg" alt="arrow-up"></div>
+                <div><p>UPGRADE</p></div></div>
+                <div><img src="./svg/list.svg" alt="list"></div>
+                <div><img src="./svg/bell.svg" alt="bell"></div>
+            </div>
+        </nav>
+        <div class="black-line"></div>
+        <section class="take-survey-main">
+            <aside class="take-survey-left"></aside>
+            <aside class="take-survey-right"></aside>
+        </section>
         <footer class="footer">
             <div class="footer-left">
                 <h3> QUICK LINKS</h3>
