--- a/sign_up.html
+++ b/sign_up.html
@@ -54,7 +54,7 @@
                     <p>- or -</p>
                     <button class="google"><a id="a3" href="pricing.html"><p>Continue with Google</p></a><img src="./svg/google.svg" alt="google"></button>
                 </div>
-                <div class="right-footer"><p>By continuing you agree to our <span>privacy policy </span> and <span>terms of use</span></p></div>
+                <div class="right-footer"><p>By continuing you agree to our <span><a href="privacy_policy.html">privacy policy</a> </span> and <span>terms of use</span></p></div>
             </div>
         </section>
     </section>
