--- a/sign_up2.html
+++ b/sign_up2.html
@@ -43,7 +43,7 @@
                         <button class="button-2"><a id="a5" href="pricing.html">Continue</a></button>
                     </div>
                 </div>
-                <div class="right-footer"><p>By continuing you agree to our <span>privacy policy </span> and <span>terms of use</span></p></div>
+                <div class="right-footer"><p>By continuing you agree to our <span><a href="privacy_policy.html">privacy policy</a> </span> and <span>terms of use</span></p></div>
             </div>
         </section>
     </section>
