--- a/terms_conditions.html
+++ b/terms_conditions.html
@@ -18,7 +18,7 @@
                     <div>
                         <img src="./images/survey-png.png" id="nav-logo" alt>
                     </div>
-                    <div>SurveySync</div>
+                    <div><a href="index.html">SurveySync</a></div>
                 </div>
                 <div class="nav-headings">
                     <p class="nav-item">CREATE SURVEY</p>
