--- a/give_survey.html
+++ b/give_survey.html
@@ -40,25 +40,13 @@
                 </div>
             </div>
         </nav>
-        <div class="black-line"></div>
-        <nav class="take-or-give-survey-nav">
-            <div>
-                <div><img src="./svg/home-light.svg" alt="home"></div>
-            </div>
-            <div>
-                <h2>PROJECT NAME</h2>
-            </div>
-            <div>
-                <div class="upgrade-icon"><div><img src="./svg/arrow-up.svg" alt="arrow-up"></div>
-                <div><p>UPGRADE</p></div></div>
-                <div><img src="./svg/list.svg" alt="list"></div>
-                <div><img src="./svg/bell.svg" alt="bell"></div>
-            </div>
-        </nav>
-        <div class="black-line"></div>
-        <section class="take-survey-main">
-            <aside class="take-survey-left"></aside>
-            <aside class="take-survey-right"></aside>
+        <section class="give-survey-main">
+            <aside class="give-survey-top">
+                <div class="give-survey-left"></div>
+                <div class="give-survey-right"></div>
+            </aside>
+            <aside class="give-survey-questions"></aside>
+            <div class="give-survey-benefits"></div>
         </section>
         <footer class="footer">
             <div class="footer-left">
