--- a/give_survey.html
+++ b/give_survey.html
@@ -42,8 +42,22 @@
         </nav>
         <section class="give-survey-main">
             <aside class="give-survey-top">
-                <div class="give-survey-left"></div>
-                <div class="give-survey-right"></div>
+                <div class="give-survey-left">
+                    <h3>SURVEY QUESTIONS</h3>
+                    <h4>Hospital Patient Satisfaction Survey</h4>
+                    <p>Check in with patients following a hospital visit to understand their satisfaction level with key elements of their experience using our patient satisfaction survey. While there are many patient satisfaction survey examples, it's essential to make sure that your survey gets to the heart of the experience.</p>
+                </div>
+                <div class="give-survey-right">
+                    <div>
+                        <h5>CATEGORY</h5>
+                        <p>Healthcare</p>
+                    </div>
+                    <div><h5>TIME TO COMPLETE</h5>
+                    <P>5 minutes (approx.)</P></div>
+                    <div> <h5>NO. OF QUESTIONS</h5><p>
+                        21
+                    </p></div>
+                </div>
             </aside>
             <aside class="give-survey-questions"></aside>
             <div class="give-survey-benefits"></div>
